--- a/notebooks/Accessing-S3-via-SageMaker-notebooks.ipynb
+++ b/notebooks/Accessing-S3-via-SageMaker-notebooks.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "03f42740",
+   "id": "1de5443f",
    "metadata": {},
    "source": [
     "---\n",
@@ -51,7 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c03a0d83",
+   "id": "75de46a2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,8 +62,24 @@
     "# Initialize the SageMaker role, session, and s3 client\n",
     "role = sagemaker.get_execution_role() # specifies your permissions to use AWS tools\n",
     "session = sagemaker.Session() \n",
-    "s3 = boto3.client('s3')\n",
-    "\n",
+    "s3 = boto3.client('s3')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4021da57",
+   "metadata": {},
+   "source": [
+    "Preview variable details."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9c052aba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Print relevant details \n",
     "role_name = role.split(\"/\")[-1]  # Extracts the last role (the actual name)\n",
     "print(f\"Execution Role: {role_name}\")  # Displays the IAM role being used\n",
@@ -74,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "94a68823",
+   "id": "ba3435f2",
    "metadata": {},
    "source": [
     "## Reading data from S3\n",
@@ -102,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b2cb752",
+   "id": "01946dab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af7368e8",
+   "id": "60f09af7",
    "metadata": {},
    "source": [
     "sagemaker.config INFO - Not applying SDK defaults from location: /etc/xdg/sagemaker/config.yaml\n",
@@ -158,13 +174,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad0ee7b8",
+   "id": "f0881f50",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pwd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "24bfd208",
+   "metadata": {},
+   "source": [
+    "/home/ec2-user/SageMaker/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aae61788",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the S3 bucket and file location\n",
     "key = \"titanic_train.csv\"  # Path to your file in the S3 bucket\n",
-    "local_file_path = \"./titanic_train.csv\"  # Local path to save the file\n",
+    "local_file_path = \"/home/ec2-user/SageMaker/titanic_train.csv\"  # Local path to save the file\n",
     "\n",
     "# Initialize the S3 client and download the file\n",
     "s3.download_file(bucket_name, key, local_file_path)\n",
@@ -173,7 +207,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "427296f8",
+   "id": "9d709dc5",
    "metadata": {},
    "source": [
     "**Note**: You may need to hit refresh on the file explorer panel to the left to see this file. If you get any permission issues...\n",
@@ -196,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c8646841",
+   "id": "c60d5894",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,7 +262,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "60f05cfc",
+   "id": "13857179",
    "metadata": {},
    "source": [
     "Total size of bucket 'doejohn-titanic-s3': 0.06 MB\n",
@@ -246,7 +280,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a649a066",
+   "id": "f1bf4518",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +289,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17950cfd",
+   "id": "792e618d",
    "metadata": {},
    "source": [
     "/home/ec2-user/SageMaker\n",
@@ -266,7 +300,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "66b4befd",
+   "id": "467b410c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aebbc893",
+   "id": "8864324e",
    "metadata": {},
    "source": [
     "Our AWS_helpers.py file can be found in `AWS_helpers/helpers.py`. With this file downloaded, you can call this function via..."
@@ -284,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e96bba65",
+   "id": "c86c1290",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +328,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6203e7cf",
+   "id": "edf41848",
    "metadata": {},
    "source": [
     "{'size_mb': 0.060057640075683594, 'size_gb': 5.865003913640976e-05}\n",
@@ -308,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1b21847b",
+   "id": "89aa7e58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -332,13 +366,13 @@
     "           (450 * 1024 * next_450_tb_price_per_gb) + \\\n",
     "           ((total_size_gb - 500 * 1024) * over_500_tb_price_per_gb)\n",
     "\n",
-    "print(f\"Estimated monthly storage cost: ${cost:.4f}\")\n",
-    "print(f\"Estimated annual storage cost: ${cost*12:.4f}\")"
+    "print(f\"Estimated monthly storage cost: ${cost:.5f}\")\n",
+    "print(f\"Estimated annual storage cost: ${cost*12:.5f}\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5de095c7",
+   "id": "2cabd398",
    "metadata": {},
    "source": [
     "Estimated monthly storage cost: $0.0000\n",
@@ -350,7 +384,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "91bcd67c",
+   "id": "69c10267",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,12 +395,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f1bf00b9",
+   "id": "91a0c04b",
    "metadata": {},
    "source": [
-    "Estimated monthly cost (0.0001 GB): $0.00000\n",
-    "    Estimated annual cost (0.0001 GB): $0.00002\n",
-    "\n",
     "**Important Considerations**:\n",
     "\n",
     "- **Pricing Tiers**: AWS S3 pricing is tiered. The first 50 TB per month is priced at `$0.023 per GB`, the next 450 TB at `$0.022 per GB`, and storage over 500 TB at `$0.021 per GB`. Ensure you apply the correct pricing tier based on your total storage size.\n",
@@ -376,28 +407,28 @@
     "For detailed and up-to-date information on AWS S3 pricing, please refer to the [AWS S3 Pricing page](https://aws.amazon.com/s3/pricing/).\n",
     "\n",
     "## Writing output files to S3\n",
-    "As your analysis generates new files, you can upload files to your bucket as demonstrated below. For this demo, you can create a blank `results.txt` file to upload to your bucket. To do so, go to **File** -> **New** -> **Text file**, and save it out as `results.txt`."
+    "As your analysis generates new files or demands additional documentation, you can upload files to your bucket as demonstrated below. For this demo, you can create a blank `Notes.txt` file to upload to your bucket. To do so, go to **File** -> **New** -> **Text file**, and save it out as `Notes.txt`."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "411c41c7",
+   "id": "e9e42e1f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the S3 bucket name and the file paths\n",
-    "train_file_path = \"results.txt\" # assuming your file is in root directory of jupyter notebook (check file explorer tab)\n",
+    "notes_file_path = \"Notes.txt\" # assuming your file is in root directory of jupyter notebook (check file explorer tab)\n",
     "\n",
-    "# Upload the training file to a new folder called \"results\". You can also just place it in the bucket's root directory if you prefer (remove results/ in code below).\n",
-    "s3.upload_file(train_file_path, bucket_name, \"results/results.txt\")\n",
+    "# Upload the training file to a new folder called \"docs\". You can also just place it in the bucket's root directory if you prefer (remove docs/ in code below).\n",
+    "s3.upload_file(notes_file_path, bucket_name, \"docs/Notes.txt\")\n",
     "\n",
     "print(\"Files uploaded successfully.\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0e0cd91d",
+   "id": "5d29b420",
    "metadata": {},
    "source": [
     "Files uploaded successfully.\n",
@@ -408,7 +439,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a956c50f",
+   "id": "88d9b98a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -425,7 +456,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22110c2b",
+   "id": "be442aa3",
    "metadata": {},
    "source": [
     "Alternatively, we can substitute this for a helper function call as well."
@@ -434,7 +465,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55ea30aa",
+   "id": "3dafc42e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,7 +475,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5452dc43",
+   "id": "f1c279c4",
    "metadata": {},
    "source": [
     "['results/results.txt', 'titanic_test.csv', 'titanic_train.csv']\n",
